name:                netwire-tutorial
version:             0.1.0.0
synopsis:            The code for my Netwire 5 tutorial.
description:         The code for my Netwire 5 tutorial.
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          cerekh@gmail.com
copyright:           2014
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable netwire-tutorial
  main-is:             Main.hs

  build-depends:       base    == 4.7.*
               ,       netwire == 5.0.0
               ,       GLFW    == 0.5.2.2
               ,       OpenGL

  hs-source-dirs:      src/

  default-language:    Haskell2010
